# fly-castle

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/gui/: Cargo.toml
crates/gui/src/: main.rs  style.css
crates/relay/: Cargo.toml  Dockerfile  README.md
crates/relay/src/: conn.rs  db.rs  event.rs  main.rs  nip05.rs  server.rs
crates/relay/src/repo/: sqlite.rs
crates/relay/tests/: cli.rs
crates/relay/tests/common/: mod.rs
relay/src/: config.rs  notice.rs  utils.rs
relay/src/repo/: postgres.rs  sqlite_migration.rs
